--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ header .icons #menu-bars{
     position: fixed;
     top: -110%; width: 100%;
     height: 100%;
-    z-index: -1004;
+    z-index: 1004;
     background: rgba(0,0,0,.8);
     display: flex;
     align-items: center;
@@ -135,11 +135,11 @@ header .icons #menu-bars{
     padding: 0.1rem;
 }
 
-#search-from.active{
+#search-form.active{
     top: 0;
 }
 
-#search-form #searh-box{
+#search-form #search-box{
     width: 50rem;
     border-bottom: .1rem solid #fff;
     padding: 1rem 0;
@@ -153,7 +153,7 @@ header .icons #menu-bars{
     color: #eee;
     }
 
-#search-from #search-box::-webkit-search-cancel-button{
+#search-form #search-box::-webkit-search-cancel-button{
     -webkit-appearance: none;
 }
 
@@ -574,7 +574,6 @@ header .icons #menu-bars{
     color:var(--green);
 }
 
-
 .loader-container{
     position: fixed;
     top:0; left:0;
@@ -596,6 +595,51 @@ header .icons #menu-bars{
     top:-110%;
     opacity:0;
 }
+
+/*media query*/
+
+@media (max-width: 768px) {
+    header .icons #menu-bars{
+        display: inline-block;
+    }
+
+    header .navbar{
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #fff;
+        border-top: .1rem solid rgba(0,0,0,.2);
+        border-bottom: .1rem solid rgba(0,0,0,.2);
+        padding: 1rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }  
+
+    header .navbar.active{
+        clip-path: polygon(0 0, 100% 100%, 0% 100%);
+    }
+    
+    header .navbar a{
+        display: block;
+        padding: 1.5rem;
+        margin: 1rem;
+        font-size: 2rem;
+        background: #eee;
+    }
+}
+
+ 
+@media(max-width:991px){
+    html{
+        font-size: 55%;
+    }
+
+    header{
+        padding: 1rem 2rem;
+    }
+} 
+
+
+
+
 
 
 
